--- a/index.html
+++ b/index.html
@@ -1,65 +1,1 @@
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>똥피하기 Poop Dodge</title>
-  <meta name="description" content="간단하지만 중독성 있는 웹게임 - 떨어지는 장애물을 피하세요!">
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="styles.css">
-  <meta name="theme-color" content="#111827">
-</head>
-<body>
-  <header class="hud">
-    <div class="hud-left">점수 <span id="score">0</span> / 최고 <span id="best">0</span></div>
-    <div class="hud-right">
-      <button id="btn-pause" title="일시정지">⏸️</button>
-      <button id="btn-sound" title="사운드 토글">🔈</button>
-    </div>
-  </header>
-
-  <main>
-    <canvas id="game" width="480" height="720" aria-label="똥피하기 게임 캔버스"></canvas>
-
-    <section id="start-screen" class="overlay visible" role="dialog" aria-modal="true">
-      <h1>똥피하기</h1>
-      <p>좌우로 움직여 떨어지는 똥을 피하세요. 파워업을 모으면 더 오래 버틸 수 있어요!</p>
-      <ul class="tips">
-        <li>키보드: ← → 또는 A D</li>
-        <li>모바일: 좌/우 버튼 또는 화면 드래그</li>
-        <li>일시정지: P</li>
-      </ul>
-      <button id="btn-start" class="primary">시작하기 ▶</button>
-    </section>
-
-    <section id="pause-screen" class="overlay" role="dialog" aria-modal="true">
-      <h2>일시정지</h2>
-      <button id="btn-resume" class="primary">계속하기 ▶</button>
-    </section>
-
-    <section id="gameover-screen" class="overlay" role="dialog" aria-modal="true">
-      <h2>게임 오버 💩</h2>
-      <p>점수: <span id="final-score">0</span></p>
-      <button id="btn-restart" class="primary">다시하기 ↻</button>
-    </section>
-
-    <div class="touch-controls">
-      <button id="btn-left" aria-label="왼쪽">◀</button>
-      <button id="btn-right" aria-label="오른쪽">▶</button>
-    </div>
-  </main>
-
-  <footer class="footer">
-    <small>© 2026 Poop Dodge. PWA / 오프라인 지원.</small>
-  </footer>
-
-  <script defer src="main.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js');
-      });
-    }
-  </script>
-</body>
-</html>
+<!doctype html>\n<html lang=\"ko\">\n<head>\n  <meta charset=\"utf-8\">\n  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no\">\n  <title>똥피하기 Poop Dodge</title>\n  <meta name=\"description\" content=\"간단하지만 중독성 있는 웹게임 - 떨어지는 장애물을 피하세요!\">\n  <link rel=\"manifest\" href=\"manifest.json\">\n  <link rel=\"stylesheet\" href=\"styles.css\">\n  <meta name=\"theme-color\" content=\"#111827\">\n</head>\n<body>\n  <header class=\"hud\">\n    <div class=\"hud-left\">점수 <span id=\"score\">0</span> / 최고 <span id=\"best\">0</span></div>\n    <div class=\"hud-right\">\n      <button id=\"btn-pause\" title=\"일시정지\">⏸️</button>\n      <button id=\"btn-sound\" title=\"사운드 토글\">🔊</button>\n    </div>\n  </header>\n\n  <main>\n    <div style=\"position:relative\">\n      <canvas id=\"game\" width=\"480\" height=\"720\" aria-label=\"똥피하기 게임 캔버스\"></canvas>\n\n      <section id=\"start-screen\" class=\"overlay visible\" role=\"dialog\" aria-modal=\"true\">\n        <h1>똥피하기</h1>\n        <p>좌우로 움직여 떨어지는 똥을 피하세요. 파워업을 모으면 더 오래 버틸 수 있어요!</p>\n        <ul class=\"tips\">\n          <li>키보드: ← → 또는 A D</li>\n          <li>모바일: 좌/우 버튼 또는 화면 드래그</li>\n          <li>일시정지: P</li>\n        </ul>\n        <div class=\"field\">\n          <label for=\"player-name\">이름</label>\n          <input id=\"player-name\" type=\"text\" maxlength=\"12\" placeholder=\"닉네임 입력 (최대 12자)\">\n          <small class=\"hint\">기기 내 랭킹에 저장돼요</small>\n        </div>\n        <button id=\"btn-start\" class=\"primary\">시작하기 ▶</button>\n\n        <section id=\"leaderboard-panel\" class=\"panel\">\n          <h3>🏆 랭킹 TOP 10</h3>\n          <ol id=\"leaderboard-list\" class=\"board\"></ol>\n        </section>\n      </section>\n\n      <section id=\"pause-screen\" class=\"overlay\" role=\"dialog\" aria-modal=\"true\">\n        <h2>일시정지</h2>\n        <button id=\"btn-resume\" class=\"primary\">계속하기 ▶</button>\n      </section>\n\n      <section id=\"gameover-screen\" class=\"overlay\" role=\"dialog\" aria-modal=\"true\">\n        <h2>게임 오버 💩</h2>\n        <p>점수: <span id=\"final-score\">0</span></p>\n        <p id=\"rank-line\" class=\"muted\"></p>\n        <button id=\"btn-restart\" class=\"primary\">다시하기 ↻</button>\n        <div class=\"panel small\">\n          <h3>내 기기 랭킹</h3>\n          <ol id=\"leaderboard-list-final\" class=\"board\"></ol>\n        </div>\n      </section>\n    </div>\n\n    <div class=\"touch-controls\">\n      <button id=\"btn-left\" aria-label=\"왼쪽\">◀</button>\n      <button id=\"btn-right\" aria-label=\"오른쪽\">▶</button>\n    </div>\n  </main>\n\n  <footer class=\"footer\">\n    <small>© 2026 Poop Dodge. PWA / 오프라인 지원.</small>\n  </footer>\n\n  <script defer src=\"main.js\"></script>\n  <script>\n    if ('serviceWorker' in navigator) {\n      window.addEventListener('load', () => {\n        navigator.serviceWorker.register('./sw.js');\n      });\n    }\n  </script>\n</body>\n</html>\n
