--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <small>© 2026 Poop Dodge. PWA / 오프라인 지원.</small>
   </footer>
 
-  <!-- Supabase client from cdnjs -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/@supabase/supabase-js/2.45.4/supabase.min.js"></script>
+  <!-- Supabase client from jsDelivr -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script defer src="main.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
